--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-html2js": "~0.2.3",
+    "grunt-bump": "0.0.13",
+    "grunt-cache-bust": "^0.4.13",
+    "grunt-concurrent": "^0.5.0",
+    "grunt-connect-proxy": "^0.2.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.9.0",
-    "grunt-concurrent": "^0.5.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-connect": "~0.6.0",
-    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.8.1",
-    "grunt-google-cdn": "^0.4.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
+    "grunt-google-cdn": "^0.4.0",
+    "grunt-html2js": "~0.2.3",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.10.0",
     "grunt-ng-constant": "~0.4.7",
-    "grunt-cache-bust": "^0.4.13",
-    "grunt-bump": "0.0.13",
-    "grunt-connect-proxy": "=0.1.10",
     "grunt-replace": "^0.8.0",
     "grunt-run-grunt": "~0.1.3",
     "grunt-shell": "~0.6.4",
