--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-bootstrap": "0.12.0",
     "components-font-awesome": "4.2.0",
     "jquery": "~1.11",
-    "lodash-compat": "~3.6.0"
+    "lodash-compat": "~3.6.0",
+    "angular-ui-select": "~0.12.1"
   },
   "appPath": "app",
   "resolutions": {
